agregado endpoints faltantes en persona
se agrega los endpoints para PUT y DELETE en personas, y su correspondiente documentacion en swagger
